tests/baselines/reference/asyncGetter5.errors.txt
tests/cases/conformance/async/downlevel/asyncGetter/asyncGetter5.ts(7,3): error TS1042: 'async' modifier cannot be used here.
tests/cases/conformance/async/downlevel/asyncGetter/asyncGetter5.ts(7,13): error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.


==== tests/cases/conformance/async/downlevel/asyncGetter/asyncGetter5.ts (2 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    class C {
      async get await(): Promise<void> {
      ~~~~~
!!! error TS1042: 'async' modifier cannot be used here.
                ~~~~~
!!! error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
      }
    }